--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,11 +7,13 @@ authors = ["Federico Barcelona <unizar@federico.barcelona>"]
 [tool.poetry.dependencies]
 python = "^3.8"
 numpy = "^1.22.2"
+matplotlib = "^3.5.1"
 
 [tool.poetry.dev-dependencies]
 mamba = "^0.11.2"
 expects = "^0.9.0"
 flake8 = "^4.0.1"
+doublex = "^1.9.3"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
