--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ authors = ["Federico Barcelona <unizar@federico.barcelona>"]
 python = "^3.8"
 numpy = "^1.22.2"
 matplotlib = "^3.5.1"
+spidev = "^3.5"
 
 [tool.poetry.dev-dependencies]
 mamba = "^0.11.2"
