--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,9 @@ expects = "^0.9.0"
 flake8 = "^4.0.1"
 doublex = "^1.9.3"
 
+[tool.poetry.scripts]
+robot = 'robotics:__main__'
+
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
