--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,15 +5,15 @@ description = ""
 authors = ["Federico Barcelona <unizar@federico.barcelona>"]
 
 [tool.poetry.dependencies]
-python = "^3.8"
-numpy = "^1.22.2"
-matplotlib = "^3.5.1"
+python = "^3.5"
+numpy = "~1.18.5"
+matplotlib = "~3.0.3"
 spidev = "^3.5"
 
 [tool.poetry.dev-dependencies]
 mamba = "^0.11.2"
-expects = "^0.9.0"
-flake8 = "^4.0.1"
+PyHamcrest = "^2.0.3"
+flake8 = "~3.9.2"
 doublex = "^1.9.3"
 
 [tool.poetry.scripts]
