--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ authors = ["Federico Barcelona <unizar@federico.barcelona>"]
 python = "^3.5"
 numpy = "~1.18.5"
 matplotlib = "~3.0.3"
-spidev = "^3.5"
+spidev = "^3.3"
 
 [tool.poetry.dev-dependencies]
 mamba = "^0.11.2"
@@ -17,7 +17,7 @@ flake8 = "~3.9.2"
 doublex = "^1.9.3"
 
 [tool.poetry.scripts]
-robot = 'robotics:__main__'
+robot = 'robotics.__main__:run'
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
