feat: Push to robot from IP from file

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-
+robot_ip
 # Created by https://www.toptal.com/developers/gitignore/api/python,intellij+all
 # Edit at https://www.toptal.com/developers/gitignore?templates=python,intellij+all
 
