--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ python = "^3.5"
 numpy = "~1.18.5"
 matplotlib = "~3.0.3"
 spidev = "^3.3"
+opencv-python = "4.2.0.34"
 
 [tool.poetry.dev-dependencies]
 mamba = "^0.11.2"
